<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    style="@style/ThemeOverlay.MyTheme.AlertDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_prompt"
        style="@style/TextAppearance.MyTheme.Headline2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsaved_changes"
        style="@style/TextAppearance.MyTheme.Headline5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        style="@style/Widget.AppCompat.ButtonBar.AlertDialog">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_and_exit"
            style="@style/Widget.Material3.Button.TextButton.Dialog"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_without_save"
            style="@style/Widget.Material3.Button.TextButton.Dialog"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/Widget.Material3.Button.TextButton.Dialog"
            />
    </LinearLayout>

</LinearLayout>